# diabet_detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  infer.py  pyproject.toml  requirements.txt  train.py
conf/: config.yaml  inference.yaml
conf/data_loading/: data_loading.yaml
conf/inference/: inference.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
data/: train_data.csv.dvc
diabet_detector/: data_preprocessing.py  model.py  trainer.py
saved_models/: scaler.pkl.dvc
saved_models/model_v1.0/: model_val_AP=0.79.ckpt.dvc
